[package]
name = "portfolio_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reference_data = {path = "../reference_data"}
market_data = {path = "../market_data"}
tokio = {version = "1", features = ["full"]}
reqwest = {version = "0.11", features = ["json"]}